# final-cmake

./: CMakeLists.txt  README.md  new.txt
include/: test.h
src/: CMakeLists.txt  main.cpp  test.cpp
